--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 .container{
     max-width: 500px;
-    margin: 10vh auto 0 auto;
+    margin: 3vh auto 0 auto;
     box-shadow: 0px 0px 43px 17px rgba(153,153,153,1);
 
     background-color: #1C1C1C;
 
+}
+footer{
+    text-align: center;
+    margin-top: 1rem;
 }
 
 #display{
